<resources>
    <string name="app_name">app</string>
    <string name="name">Name</string>
    <string name="personal_information">Personal Information</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="phone">Phone</string>
    <string name="enter_your_phone_no">Enter your Phone No</string>
    <string name="password">Password</string>
    <string name="enter_your_password">enter_your_password</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="visit_with_us">Visit with us</string>
    <string name="Login">Login</string>
    <string name="Signup">Signup</string>
    <string name="names">Names</string>
    <string name="nextscreen">Nextscreen</string>
    <string name="arrow"><![CDATA[->]]></string>
    <string name="visit_us">Visit Us</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="enter_user_name">enter user name</string>
    <string name="todo">TODO</string>
    <string name="user_name">User_name</string>
    <string name="done">Done</string>
    <string name="forget_password">Forget Password?</string>
    <string name="don_t_have_account">Don\'t have Account?</string>
    <string name="your_password">your_password</string>
    <string name="submit">Submit</string>


    // string array  for Static Spinner

    <string-array name="capital">

        <item name="select">Select state capital</item>
        <item name="select">Delhi</item>
        <item name="select">Patna</item>
        <item name="select">Ranchi</item>
        <item name="select">Mumbai</item>

    </string-array>
</resources>