<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundimg3"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".MainActivity7">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:text="@string/Login"
        android:textColor="#E9E1DE"
        android:textSize="35sp"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/img_1"
            android:layout_margin="18dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="18dp"
            android:autofillHints="0"
            android:padding="4dp"
            android:hint="@string/user_name"
            android:textSize="35sp"
            android:textColorHint="#E6E0DE"
            android:inputType="text"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/psw2"
            android:layout_margin="18dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="18dp"
            android:autofillHints="0"
            android:padding="4dp"
            android:hint="@string/your_password"
            android:textSize="35sp"
            android:textColorHint="#E7E1DD"
            android:inputType="textPassword"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

    <Button
        android:id="@+id/btnDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:textSize="28sp"
        android:layout_margin="14dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textSize="28sp"
            android:layout_margin="10dp"
            android:layout_marginEnd="0dp"
            android:textColor="#E7E1DD"
            android:textAlignment="textEnd"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_account"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="#E7E1DD"
            android:layout_margin="10dp"
            android:layout_gravity="center"/>
        <Button
            android:id="@+id/btnSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Signup"
            android:layout_margin="10dp"
            android:layout_gravity="center"/>

    </LinearLayout>
</LinearLayout>