<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundimg5"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity8">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Signup"
        android:textSize="30sp"
        android:textColor="#E7E1DD"
        android:textStyle="bold"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        android:layout_margin="14dp"
        app:cardBackgroundColor="#FFF8E1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="8dp">

           <ImageView
               android:layout_width="30dp"
               android:layout_height="30dp"
               android:contentDescription="@string/todo"
               android:src="@drawable/img_1"
               android:layout_margin="18dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:layout_weight="0"
                android:autofillHints="name"
                android:hint="@string/enter_your_name"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColorHint="#00796B"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="8dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/email"
                android:layout_margin="18dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:layout_weight="0"
                android:autofillHints="emailAddress"
                android:hint="@string/enter_your_email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textColorHint="#00796B" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="8dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/email"
                android:layout_margin="18dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:layout_weight="0"
                android:autofillHints="phone"
                android:hint="@string/enter_your_phone_no"
                android:inputType="phone"
                android:minHeight="48dp"
                android:textColorHint="#00796B" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="8dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/email"
                android:layout_margin="18dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="0"
                android:autofillHints="emailAddress"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColorHint="#00796B" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_margin="8dp">

            <Button
                android:id="@+id/btnSignup1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Signup"
                android:backgroundTint="#AB6C6C"
                android:layout_margin="10dp"/>

        </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>