<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".MainActivity3">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="#A7B625">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="20dp"
                app:cardBackgroundColor="#03F4C4"
                android:layout_margin="5dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/personal_information"
                android:textSize="22sp"
                android:textAlignment="center"
                android:layout_margin="5dp"
                android:padding="4dp"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="20dp"
                app:cardBackgroundColor="#66D1F8"
                android:layout_margin="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="2dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="100dp"
                    android:src="@drawable/img"
                    android:layout_gravity="center"
                    android:padding="2dp"
                    android:layout_margin="3dp"
                    android:contentDescription="@null"/>

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="130dp"
                    android:src="@drawable/img"
                    android:layout_gravity="center"
                    android:padding="2dp"
                    android:layout_margin="3dp"
                    android:contentDescription="@null"/>
                <ImageView
                    android:layout_width="110dp"
                    android:layout_height="160dp"
                    android:src="@drawable/img"
                    android:layout_gravity="center_horizontal"
                    android:padding="2dp"
                    android:layout_margin="3dp"
                    android:contentDescription="@null"/>
                <ImageView
                    android:layout_width="140dp"
                    android:layout_height="190dp"
                    android:src="@drawable/img"
                    android:layout_gravity="center_horizontal"
                    android:padding="2dp"
                    android:layout_margin="3dp"
                    android:contentDescription="@null"/>




            </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="20dp"
                app:cardBackgroundColor="#EFDDDC"
                android:layout_margin="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="6dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/names"
                        android:textSize="22sp"
                        android:layout_margin="6dp"
                        android:padding="4dp"
                        android:layout_weight="1"
                        android:textStyle="bold"/>

                    <EditText
                        android:layout_width="230dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="0"
                        android:autofillHints="name"
                        android:hint="@string/enter_your_name"
                        android:inputType="text"
                        android:minHeight="48dp"
                        android:textColorHint="#00796B"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="20dp"
                app:cardBackgroundColor="#EFDDDC"
                android:layout_margin="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="6dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textSize="22sp"
                    android:layout_margin="6dp"
                    android:padding="4dp"
                    android:layout_weight="1"
                    android:textStyle="bold"/>

                <EditText
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="0"
                    android:autofillHints="emailAddress"
                    android:hint="@string/enter_your_email"
                    android:inputType="textEmailAddress"
                    android:minHeight="48dp"
                    android:textColorHint="#00796B" />
            </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="20dp"
                app:cardBackgroundColor="#EFDDDC"
                android:layout_margin="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="6dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:textSize="22sp"
                    android:layout_margin="6dp"
                    android:padding="4dp"
                    android:layout_weight="1"
                    android:layout_marginEnd="1dp"
                    android:textStyle="bold"/>

                <EditText
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="0"
                    android:autofillHints="emailAddress"
                    android:hint="@string/enter_your_phone_no"
                    android:inputType="phone"
                    android:minHeight="48dp"
                    android:textColorHint="#00796B" />
            </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="20dp"
                app:cardBackgroundColor="#EFDDDC"
                android:layout_margin="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="6dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textSize="22sp"
                    android:layout_margin="7dp"
                    android:padding="4dp"
                    android:layout_weight="0"
                    android:layout_marginEnd="0dp"
                    android:textStyle="bold"/>

                <EditText
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="0"
                    android:autofillHints="emailAddress"
                    android:hint="@string/enter_your_password"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:textColorHint="#00796B" />
            </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="20dp"
                app:cardBackgroundColor="#83E5F0"
                android:layout_margin="5dp">
            <LinearLayout
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="6dp">

                <Button
                    android:id="@+id/button1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:layout_weight="1"
                    android:layout_margin="6dp"
                    android:padding="5dp" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:layout_weight="1"
                    android:layout_margin="6dp"
                    android:padding="5dp" />
            </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>